<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Stream</string>
    <string name="title_home">Meine Bestellung</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_user">Konto</string>
    <string name="text_dk"><u>Ich habe die Allgemeinen Geschäftsbedingungen gelesen und stimme ihnen zu</u>.</string>
    <string name="hello_again">Hallo nochmal!</string>
    <string name="well_come">Willkommen zurück, liebe Misses!</string>
    <string name="email">E-Mail *</string>
    <string name="pass">Passwort *</string>
    <string name="sign_in">Anmelden</string>
    <string name="forgot_pass_9">Passwort vergessen?</string>
    <string name="do_not_have_an_acc">Sie haben noch kein Konto?</string>
    <string name="sign_up">Registrieren</string>
    <string name="let_create">Erstellen wir hier Ihr Konto!</string>
    <string name="info">Informationen</string>
    <string name="name_8">Name *</string>
    <string name="firt_name_8">Vorname *</string>
    <string name="com_8">Firma *</string>
    <string name="vat_id_8">Umsatzsteuer-ID *</string>
    <string name="street_8">Straße *</string>
    <string name="house_number_8">Hausnummer *</string>
    <string name="postal_code_8">Postleitzahl *</string>
    <string name="city_8">Ort *</string>
    <string name="country_8">Land *</string>
    <string name="telephone_8">Telefon *</string>
    <string name="conf_pass_8">Passwort bestätigen *</string>
    <string name="tiktok_us_8">TikTok-Benutzername</string>

    <string name="address_and_shipping">Adresse und Versand</string>
    <string name="dif_devi_add">Abweichende Lieferadresse?</string>
    <string name="full_rep_8">Vollständiger Name des Empfängers *</string>
    <string name="account">Konto</string>
    <string name="confirm_email">Eine Bestätigungs-E-Mail zur Kontoaktivierung wird gesendet</string>
    <string name="check_tiktok">(Bitte klicken Sie zur Bestätigung auf die Schaltfläche „Überprüfen“)</string>
    <string name="buy_time">Kaufzeit:</string>
    <string name="status">Status:</string>
    <string name="paymen_sts">Zahlungsstatus:</string>
    <string name="paymen_sv">Zahlungsservice:</string>
    <string name="list_pro">Produkt auflisten</string>
    <string name="total_net_price">Nettogesamtpreis:</string>
    <string name="vat">MwSt.:</string>
    <string name="total_price">Gesamtpreis:</string>
    <string name="change_pass">Passwort ändern</string>
    <string name="forgot_pass">Passwort vergessen</string>
    <string name="enter_your_email">E-Mail-Adresse eingeben, um einen Bestätigungscode zu erhalten</string>
    <string name="continue_">Weiter</string>
    <string name="edit_profile">Profil bearbeiten</string>
    <string name="update_">Aktualisieren</string>
    <string name="loading_">Wird geladen ...</string>
    <string name="my_order">Meine Bestellung:</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="email_0">E-Mail</string>
    <string name="telephone">Telefon</string>
    <string name="tiktok">TikTok</string>
    <string name="street">Straße</string>
    <string name="house_number">Hausnummer</string>
    <string name="postal_code">Postleitzahl Code</string>
    <string name="city">Stadt</string>
    <string name="country">Land</string>
    <string name="total_net_0">Gesamt (netto)</string>
    <string name="total_net_gr">Gesamt (brutto):</string>
    <string name="item">Artikel</string>
    <string name="update_info">Info aktualisieren</string>
    <string name="pay_ment">Zahlung</string>
    <string name="logout">Abmelden</string>
</resources>
