<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:background="@color/white"
    tools:context=".ui.thongtincanhan.DangNhapActivity">

    <LinearLayout
        android:paddingTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="10dp"
            android:id="@+id/ic_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_back"/>

        <TextView
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="18dp"
            android:paddingRight="64dp"
            android:textColor="@color/white"
            android:text="Member Sign in"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/manrope_extra_bold"
        android:gravity="center"
        android:text="@string/hello_again"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/well_come"
        android:textColor="@color/grey800"
        android:fontFamily="@font/manrope_regular"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"/>

    <LinearLayout

        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/grey500"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                style="@style/MyTextInputOutlined">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/txt_email"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:fontFamily="@font/manrope_medium"
                    android:textColor="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/MyTextInputOutlined"
            android:textColor="@android:color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/grey500"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey500"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:id="@+id/txt_pass"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:fontFamily="@font/manrope_medium"
                android:textSize="14sp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Button đăng nhập -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:fontFamily="@font/manrope_bold"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="16dp"/>

        <!-- Quên mật khẩu -->
        <TextView
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_marginTop="16dp"
            android:id="@+id/tvForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textColor="@color/primaryBG"
            android:textSize="14sp"
            android:fontFamily="@font/manrope_bold"
            android:layout_marginBottom="12sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center"
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_an_acc"
            android:fontFamily="@font/manrope_extra_light"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/btnDangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/manrope_bold"
            android:textColor="@color/primaryBG"/>
    </LinearLayout>


</LinearLayout>