<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:background="@drawable/bg_text_rounded_4"
    android:padding="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_name"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    tools:text="Áo Thun Polo Nam Thêu Chữ U,Chất Liệu Thấm Hút Mồ Hôi,Cổ Phối Màu "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="€ "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txt_price"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        tools:text="200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text=" x "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/txt_quantity"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        tools:text=" 2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="bottom|right"
                android:gravity="right|bottom"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="right|bottom"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/total_net_0"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_gravity="right|bottom"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/txt_total_net"
                        android:textSize="14sp"
                        android:textColor="@color/primaryBG"
                        tools:text="2200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text=" €"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/vat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_vat"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    tools:text="19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text=" %"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginRight="12dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/total_net_gr"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txt_gross"
                    android:textSize="14sp"
                    android:textColor="@color/primaryBG"
                    tools:text="3000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text=" €"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
